# fi

./: .gitignore  README.md  pyproject.toml
.vendor/pygments-2.20.0.dist-info/: RECORD
.vendor/pytest-9.0.3.dist-info/: RECORD
data/: agent_routing.json  app_registry.json
src/: start.py
src/desktop_automation_agent/: __init__.py  _time.py  models.py  (+1 more)
tests/: AUDIT.md  README.md  conftest.py  test_action_history_analyzer.py  test_adaptive_timing_calibrator.py  test_agent_handoff_protocol.py  test_agent_message_bus.py  test_ai_interface_navigator.py  test_allowlist_enforcer.py  test_animation_wait_module.py  test_anomaly_detector.py  test_anti_loop_detector.py  test_application_launcher.py  test_approval_gate.py  test_checkpoint_manager.py  test_cicd_pipeline_integration.py  test_clipboard_data_bridge.py  test_com_automation_connector.py  test_compliance_audit_report_generator.py  test_condition_validator.py  test_conditional_branch_evaluator.py  test_confidence_based_auto_routing.py  test_dashboard_data_provider.py  test_data_export_pipeline.py  test_database_logging_backend.py  test_dead_letter_queue.py  test_desktop_automation_agent.py  test_display_handler.py  test_engine.py  test_episodic_memory_logger.py  test_error_classifier.py  test_escalation_manager.py  test_event_trigger_listener.py  test_execution_trace_recorder.py  test_external_credential_injector.py  test_external_workflow_trigger_receiver.py  test_fail_safe_controller.py  test_feedback_loop_collector.py  test_file_based_data_exchange.py  test_form_automation.py  (+57 more)
tests_artifacts/: cicd-output.json
(+232 files in other folders)
