[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-automation-agent"
version = "0.1.0"
description = "Autonomous desktop agent for environment control, account switching, and multi-step workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".*", "__pycache__", "tests_tmp_*"]
python_files = ["test_*.py"]
